--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "version": "0.0.1",
     "dependencies": {
-        "logging": "latest"
+        "logging": "latest",
+        "coffee-script": "latest"
     }
 }
